# backendnodemoralis

./: .env  .gitignore  API_DOCUMENTATION.md  DOCKER_README.md  Dockerfile  JETCV_NFT_ANALYSIS.md  PRISMA_SETUP.md  README-VERIFF-NEW.md  README.md  STRUCTURE.md  accesso.sh  azure-setup.sh  clean.sh  code-token.sh  complycubeClient.js  contract.txt  cv_1755012486797.json  cv_1755012619331.json.backup  cv_1755015703075.json.backup  db.sh  dbSync.js  decode-token.sh  decrypt.js  deploy-prod.sh  deploy.sh  deploy2.sh  docker-compose.yml  docker-deploy.sh  env.example  jest.config.js  jetcvnft-key-new.pem  jetcvnft-key.pem  jetcvnft-key2.pem  jetcvnft-temp.pem  jetcvnft-temp.pem.pub  mario-rossi-cv.json  package-lock.json  package.json  run.sh  server-test.js  (+16 more)
.aws/: task-definition.json
.husky/: pre-push
config/: README.md  constants.js  database.js  prisma.js
contracts/: JETCV.json  JetCVNFT.abi.json
contratto/: .env.example  create.sh
contratto/jetcv_nft_solana_anchor/programs/jetcv_nft/: Cargo.toml
contratto/jetcv_nft_solana_anchor/programs/jetcv_nft/src/: lib.rs
controllers/: User.js  UserPrisma.js  WalletPrisma.js
deployhardat/: .env.example  .env.test  .gitignore  JETCV_ABI.json  README.md  contract_bytecode.txt  contract_full_ABI.json  contract_minimal_ABI.json  deploy.sh  hardhat.config.js  package.json
examples/: prisma-api-test.js  veriff-new-curl-examples.sh
frontend/: package.json
my-contract/: .env.example  Anchor.toml  Cargo.toml  README.md  hardhat.config.js  lib.rs  package.json  script.js
prisma/: schema.prisma
routes/: collections.js  (+6 more)
(+53 files in other folders)
