[package]
name = "jetcv_nft"
version = "0.1.0"
edition = "2021"

[lib]
name = "jetcv_nft"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
idl-build = []
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["associated-token", "token"] }
mpl-token-metadata = "4.1.2"
